--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
               (Organization Type: Personal)
             </li>
             <li>
-              Designed, Developed, Maintained by Mr. PRANAV TUMA & Mr.
-              SRIDHARNATH TUMA & Mrs. SANGEETHA TUMA (personal)
-            </li>
+              Designed, Developed, Maintained by Mr. PRANAV TUMA, Mr.
+              SRIDHARNATH TUMA & Mrs. SANGEETHA TUMA</li>
             <li>
               email id:
               <a href="mailto:sangeethatuma@primepropertiesagency.com"
@@ -42,15 +41,15 @@
               <span class="strike-through"
                 >sangeetha@primepropertiesagency.com</span
               >
-              (earlier)
+              (previous)
             </li>
             <li>SANGEETHA TUMA® Trademark Registered</li>
             <li>
-              All above Owner, Founder & Sole Proprietor and Operated by Mrs.
+              Owner, Founder & Sole Proprietor and Operated by Mrs.
               SANGEETHA TUMA
             </li>
             <li>
-              Owned & Operated by Mr. SRIDHARNATH TUMA & Mrs. SANGEETHA TUMA
+              Operated by Mr. SRIDHARNATH TUMA
             </li>
             <li>
               Self-setup & established with own capital/investment and commenced
@@ -111,8 +110,8 @@
               >(organization type : personal)
             </li>
             <li>
-              Designed, Developed, Maintained by Mr. PRANAV TUMA & Mr.
-              SRIDHARNATH TUMA & Mrs. SANGEETHA TUMA (personal)
+              Designed, Developed, Maintained by Mr. PRANAV TUMA, Mr.
+              SRIDHARNATH TUMA & Mrs. SANGEETHA TUMA
             </li>
             <li>
               email id:
@@ -126,14 +125,14 @@
               <span class="strike-through"
                 >sangeetha@blossomdigitalshop.com</span
               >
-              (earlier)
+              (previous)
             </li>
             <li>
-              All above Owner, Founder & Sole Proprietor and Operated by Mrs.
+              Owner, Founder & Sole Proprietor and Operated by Mrs.
               SANGEETHA TUMA
             </li>
             <li>
-              Owned & Operated by Mr. SRIDHARNATH TUMA & Mrs. SANGEETHA TUMA
+              Operated by Mr. SRIDHARNATH TUMA
             </li>
             <li>
               Self-Setup & Established with Own Capital/Investment and commenced
