--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             </li>
             <li>
               Designed, Developed, Maintained by Mr. PRANAV TUMA, Mr.
-              SRIDHARNATH TUMA & Mrs. SANGEETHA TUMA</li>
+              SRIDHARNATH TUMA & Mrs. SANGEETHA TUMA
+            </li>
             <li>
               email id:
               <a href="mailto:sangeethatuma@primepropertiesagency.com"
@@ -45,12 +46,10 @@
             </li>
             <li>SANGEETHA TUMA® Trademark Registered</li>
             <li>
-              Owner, Founder & Sole Proprietor and Operated by Mrs.
-              SANGEETHA TUMA
+              Owner, Founder & Sole Proprietor and Operated by Mrs. SANGEETHA
+              TUMA
             </li>
-            <li>
-              Operated by Mr. SRIDHARNATH TUMA
-            </li>
+            <li>Operated by Mr. SRIDHARNATH TUMA</li>
             <li>
               Self-setup & established with own capital/investment and commenced
               in 2020
@@ -105,10 +104,10 @@
               BDS Style® (brand name) Trademark Registered ✅ (organization type
               : personal)
             </li>
-            <li>
+            <!-- <li>
               <a href="https://www.bdsstyle.com"> https://www.bdsstyle.com</a
               >(organization type : personal)
-            </li>
+            </li> -->
             <li>
               Designed, Developed, Maintained by Mr. PRANAV TUMA, Mr.
               SRIDHARNATH TUMA & Mrs. SANGEETHA TUMA
@@ -128,12 +127,10 @@
               (previous)
             </li>
             <li>
-              Owner, Founder & Sole Proprietor and Operated by Mrs.
-              SANGEETHA TUMA
+              Owner, Founder & Sole Proprietor and Operated by Mrs. SANGEETHA
+              TUMA
             </li>
-            <li>
-              Operated by Mr. SRIDHARNATH TUMA
-            </li>
+            <li>Operated by Mr. SRIDHARNATH TUMA</li>
             <li>
               Self-Setup & Established with Own Capital/Investment and commenced
               in 2022
@@ -145,6 +142,15 @@
               website is live since april 2022
             </li>
           </ul>
+          <!-- false domains subsection  -->
+          <div class="false-domains">
+            <h4>
+              Domains not connected and inactive with complete domain rights
+            </h4>
+            <ul>
+              <li>bdsstyle.com 🚫</li>
+            </ul>
+          </div>
           <!-- organization licenses -->
           <div class="organization-licenses">
             <h4>Organization licenses</h4>
@@ -164,6 +170,15 @@
           <p class="operation-sector">Transport services</p>
           <p>Organization type: personal</p>
           <p>Owned by Mr. Sridharnath Tuma & Mrs. Sangeetha Tuma</p>
+          <!-- false domains subsection  -->
+          <div class="false-domains">
+            <h4>
+              Domains not connected and inactive with complete domain rights
+            </h4>
+            <ul>
+              <li>prasansri.com 🚫</li>
+            </ul>
+          </div>
         </div>
 
         <!-- END: organizations section -->
