--- a/index.html
+++ b/index.html
@@ -168,17 +168,9 @@
         <div class="organization">
           <h3>PraSanSri</h3>
           <p class="operation-sector">Transport services</p>
+          <p><a href="https://prasansri.com">https://prasansri.com</a></p>
           <p>Organization type: personal</p>
-          <p>Owned by Mr. Sridharnath Tuma & Mrs. Sangeetha Tuma</p>
-          <!-- false domains subsection  -->
-          <div class="false-domains">
-            <h4>
-              Domains not connected and inactive with complete domain rights
-            </h4>
-            <ul>
-              <li>prasansri.com 🚫</li>
-            </ul>
-          </div>
+          <p>Owned and operated by Mr. Sridharnath Tuma & Mrs. Sangeetha Tuma</p>
         </div>
 
         <!-- END: organizations section -->
