--- a/index.html
+++ b/index.html
@@ -30,20 +30,6 @@
               Designed, Developed, Maintained by Mr. PRANAV TUMA, Mr.
               SRIDHARNATH TUMA & Mrs. SANGEETHA TUMA
             </li>
-            <li>
-              email id:
-              <a href="mailto:sangeethatuma@primepropertiesagency.com"
-                >sangeethatuma@primepropertiesagency.com</a
-              >
-              (organization type: personal)
-            </li>
-            <li>
-              email id:
-              <span class="strike-through"
-                >sangeetha@primepropertiesagency.com</span
-              >
-              (previous)
-            </li>
             <li>SANGEETHA TUMA® Trademark Registered</li>
             <li>
               Owner, Founder & Sole Proprietor and Operated by Mrs. SANGEETHA
@@ -66,7 +52,7 @@
             <h4>
               Domains not connected and inactive with complete domain rights
             </h4>
-            <ul>
+            <ul class="red">
               <li>primepropertiesagency.in 🚫</li>
               <li>primepropertiesagency.co.in 🚫</li>
             </ul>
@@ -83,6 +69,21 @@
               <li>
                 Government Of Telangana Shops & Establishment License No:
                 SEA/HYD/ALO/03/0431431/2022
+              </li>
+            </ul>
+          </div>
+          <!-- deleted email ids -->
+          <div class="red">
+            <h4>
+              <span class="red">Permanently deleted</span> Google Workspace
+              email on 24-05-2025
+            </h4>
+            <ul>
+              <li class="strike-through">
+                sangeethatuma@primepropertiesagency.com
+              </li>
+              <li class="strike-through">
+                sangeetha@primepropertiesagency.com
               </li>
             </ul>
           </div>
@@ -104,27 +105,9 @@
               BDS Style® (brand name) Trademark Registered ✅ (organization type
               : personal)
             </li>
-            <!-- <li>
-              <a href="https://www.bdsstyle.com"> https://www.bdsstyle.com</a
-              >(organization type : personal)
-            </li> -->
             <li>
               Designed, Developed, Maintained by Mr. PRANAV TUMA, Mr.
               SRIDHARNATH TUMA & Mrs. SANGEETHA TUMA
-            </li>
-            <li>
-              email id:
-              <a href="mailto:sangeethatuma@blossomdigitalshop.com"
-                >sangeethatuma@blossomdigitalshop.com</a
-              >
-              (organization type: personal)
-            </li>
-            <li>
-              email id:
-              <span class="strike-through"
-                >sangeetha@blossomdigitalshop.com</span
-              >
-              (previous)
             </li>
             <li>
               Owner, Founder & Sole Proprietor and Operated by Mrs. SANGEETHA
@@ -147,7 +130,7 @@
             <h4>
               Domains not connected and inactive with complete domain rights
             </h4>
-            <ul>
+            <ul class="red">
               <li>bdsstyle.com 🚫</li>
             </ul>
           </div>
@@ -162,6 +145,19 @@
               <li>SEA/HYD/ALO/03/0406022/2022</li>
             </ul>
           </div>
+          <!-- deleted email ids -->
+          <div class="red">
+            <h4>
+              <span class="red">Permanently deleted</span> Google Workspace
+              email on 24-05-2025
+            </h4>
+            <ul>
+              <li class="strike-through">
+                sangeethatuma@blossomdigitalshop.com
+              </li>
+              <li class="strike-through">sangeetha@blossomdigitalshop.com</li>
+            </ul>
+          </div>
         </div>
 
         <!-- organization three: prasansri  -->
@@ -170,9 +166,24 @@
           <p class="operation-sector">Transport services</p>
           <p><a href="https://prasansri.com">https://prasansri.com</a></p>
           <p>Organization type: personal</p>
-          <p>Owned and operated by Mr. Sridharnath Tuma & Mrs. Sangeetha Tuma</p>
+          <p>
+            Owned and operated by Mr. Sridharnath Tuma & Mrs. Sangeetha Tuma
+          </p>
         </div>
 
+        <!-- realtor licenses -->
+        <div class="organization">
+          <h3>Telangana State Real Estate Regulatory Authority</h3>
+          <ul>
+            <li>Authorized User : Mrs. Sangeetha Tuma</li>
+            <li>License No : A02400001060</li>
+            <li>Issued Date : 18/02/2020</li>
+            <li>
+              Note: Since the issue of TG RERA license I have not authorized any
+              Entity/ Agent or Person/s to act on my behalf since 18/02/2020
+            </li>
+          </ul>
+        </div>
         <!-- END: organizations section -->
       </section>
       <hr />
