--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               (Organization Type: Personal)
             </li>
             <li>
-              Designed, Developed, Maintained by Mr. PRANAV TUMA, Mr.
+              Powered by PraSanSri. Designed, Developed, Maintained by Mr. PRANAV TUMA, Mr.
               SRIDHARNATH TUMA & Mrs. SANGEETHA TUMA
             </li>
             <li>SANGEETHA TUMA® Trademark Registered</li>
@@ -35,7 +35,6 @@
               Owner, Founder & Sole Proprietor and Operated by Mrs. SANGEETHA
               TUMA
             </li>
-            <li>Operated by Mr. SRIDHARNATH TUMA</li>
             <li>
               Self-setup & established with own capital/investment and commenced
               in 2020
@@ -106,14 +105,13 @@
               : personal)
             </li>
             <li>
-              Designed, Developed, Maintained by Mr. PRANAV TUMA, Mr.
+              Powered by PraSanSri. Designed, Developed, Maintained by Mr. PRANAV TUMA, Mr.
               SRIDHARNATH TUMA & Mrs. SANGEETHA TUMA
             </li>
             <li>
               Owner, Founder & Sole Proprietor and Operated by Mrs. SANGEETHA
               TUMA
             </li>
-            <li>Operated by Mr. SRIDHARNATH TUMA</li>
             <li>
               Self-Setup & Established with Own Capital/Investment and commenced
               in 2022
@@ -197,12 +195,7 @@
             <figcaption>Sangeetha Tuma</figcaption>
           </figure>
           <div>
-            <p>
-              I am Mrs.SANGEETHA TUMA Full Surname TUMA with Suffix as per
-              Aadhaar, PAN, Voter ID, GSTIN & Other Licences
-            </p>
-            <p>T. Sangeetha Incomplete Surname</p>
-            <p>T with Prefix TUMA Sangeetha Full Surname TUMA with Prefix</p>
+            <p>I am Mrs.SANGEETHA TUMA</p>
             <p>
               4th generation from the famous business family of Hyderabad with
               experience and knowledge in business
@@ -219,21 +212,16 @@
         <ul>
           <li>Married: August 1998</li>
           <li>
-            Spouse: Mr.SRIDHARNATH TUMA full surname TUMA with suffix as per
-            Aadhaar, PAN & Voter ID
+            Spouse: Mr.SRIDHARNATH TUMA
           </li>
-          <li>T. Sridharnath incompete surname T with prefix</li>
           <li>
-            Son: Mr. PRANAV TUMA full surname TUMA with suffix as per Aadhaar,
-            PAN & Voter ID
+            Son: Mr. PRANAV TUMA
           </li>
-          <li>T. Pranav incomplete surname T with prefix</li>
         </ul>
         <div class="address">
           <p>
-            Permanent Residence & Registered Business & Registered Office
-            Address, as Per Aadhaar, Voter ID, PAN, GSTIN and Registered
-            Business Licenses:
+            Permanent Residence & Registered Office
+            Address:
           </p>
           <pre>
 Flat No 3D, Plot No 88 & 88/A 
