--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
           <h3>Prime Properties Real Estate Agency®</h3>
           <p class="operation-sector">Real estate services</p>
           <ul>
-            <li>Organization Type : Personal</li>
             <li>
               <a href="https://www.primepropertiesagency.com"
                 >https://www.primepropertiesagency.com®</a
               >
-              (Organization Type: Personal)
             </li>
             <li>
               Powered by PraSanSri. Designed, Developed, Maintained by Mr. PRANAV TUMA, Mr.
@@ -93,16 +91,13 @@
           <h3>Blossom Digital Shopping™</h3>
           <p class="operation-sector">Clothing/Apparel</p>
           <ul>
-            <li>Organization Type: Personal</li>
             <li>
               <a href="https://www.blossomdigitalshop.com"
                 >https://www.blossomdigitalshop.com</a
               >
-              (organization type : personal)
             </li>
             <li>
-              BDS Style® (brand name) Trademark Registered ✅ (organization type
-              : personal)
+              BDS Style® (brand name) Trademark Registered ✅ 
             </li>
             <li>
               Powered by PraSanSri. Designed, Developed, Maintained by Mr. PRANAV TUMA, Mr.
@@ -163,7 +158,6 @@
           <h3>PraSanSri</h3>
           <p class="operation-sector">Transport services</p>
           <p><a href="https://prasansri.com">https://prasansri.com</a></p>
-          <p>Organization type: personal</p>
           <p>
             Owned and operated by Mr. Sridharnath Tuma & Mrs. Sangeetha Tuma
           </p>
