--- a/index.html
+++ b/index.html
@@ -169,10 +169,9 @@
           <ul>
             <li>Authorized User : Mrs. Sangeetha Tuma</li>
             <li>License No : A02400001060</li>
-            <li>Issued Date : 18/02/2020</li>
             <li>
               Note: Since the issue of TG RERA license I have not authorized any
-              Entity/ Agent or Person/s to act on my behalf since 18/02/2020
+              Entity/ Agent or Person/s to act on my behalf
             </li>
           </ul>
         </div>
