--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
               >
             </li>
             <li>
-              Powered by PraSanSri. Designed, Developed, Maintained by Mr. PRANAV TUMA, Mr.
-              SRIDHARNATH TUMA & Mrs. SANGEETHA TUMA
+              Powered by PraSanSri.
             </li>
-            <li>SANGEETHA TUMA® Trademark Registered</li>
             <li>
-              Owner, Founder & Sole Proprietor and Operated by Mrs. SANGEETHA
+              Owner, Founder & Sole Proprietor Mrs. SANGEETHA
               TUMA
             </li>
             <li>
@@ -100,11 +98,10 @@
               BDS Style® (brand name) Trademark Registered ✅ 
             </li>
             <li>
-              Powered by PraSanSri. Designed, Developed, Maintained by Mr. PRANAV TUMA, Mr.
-              SRIDHARNATH TUMA & Mrs. SANGEETHA TUMA
+              Powered by PraSanSri.
             </li>
             <li>
-              Owner, Founder & Sole Proprietor and Operated by Mrs. SANGEETHA
+              Owner, Founder & Sole Proprietor Mrs. SANGEETHA
               TUMA
             </li>
             <li>
@@ -159,7 +156,7 @@
           <p class="operation-sector">Transport services</p>
           <p><a href="https://prasansri.com">https://prasansri.com</a></p>
           <p>
-            Owned and operated by Mr. Sridharnath Tuma & Mrs. Sangeetha Tuma
+            Owned by Mr. Sridharnath Tuma & Mrs. Sangeetha Tuma
           </p>
         </div>
 
