removed some trademarks

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <ul>
             <li>
               <a href="https://www.primepropertiesagency.com"
-                >https://www.primepropertiesagency.com®</a
+                >https://www.primepropertiesagency.com</a
               >
             </li>
             <li>
@@ -48,8 +48,8 @@
               Domains not connected and inactive with complete domain rights
             </h4>
             <ul class="red">
-              <li>primepropertiesagency.in 🚫</li>
-              <li>primepropertiesagency.co.in 🚫</li>
+              <li><s>primepropertiesagency.in </s>🚫</li>
+              <li><s>primepropertiesagency.co.in </s>🚫</li>
             </ul>
           </div>
           <!-- organization licenses -->
@@ -58,7 +58,7 @@
             <ul>
               <li>GSTIN Licence Issued Date : 02-07-2021</li>
               <li>
-                GSTIN NO: 36AETPT2433F1Z7  Trade Mark License No: 5185464
+                GSTIN NO: 36AETPT2433F1Z7
               </li>
               <li>Trade Mark License No: 6084751</li>
               <li>
@@ -121,7 +121,7 @@
               Domains not connected and inactive with complete domain rights
             </h4>
             <ul class="red">
-              <li>bdsstyle.com 🚫</li>
+              <li><s>bdsstyle.com</s> 🚫</li>
             </ul>
           </div>
           <!-- organization licenses -->
