--- a/index.html
+++ b/index.html
@@ -24,13 +24,8 @@
                 >https://www.primepropertiesagency.com</a
               >
             </li>
-            <li>
-              Powered by PraSanSri.
-            </li>
-            <li>
-              Owner, Founder & Sole Proprietor Mrs. SANGEETHA
-              TUMA
-            </li>
+            <li>Powered by PraSanSri IT Services.</li>
+            <li>Owner, Founder & Sole Proprietor Mrs. SANGEETHA TUMA</li>
             <li>
               Self-setup & established with own capital/investment and commenced
               in 2020
@@ -57,9 +52,7 @@
             <h4>Organization licenses</h4>
             <ul>
               <li>GSTIN Licence Issued Date : 02-07-2021</li>
-              <li>
-                GSTIN NO: 36AETPT2433F1Z7
-              </li>
+              <li>GSTIN NO: 36AETPT2433F1Z7</li>
               <li>Trade Mark License No: 6084751</li>
               <li>
                 Government Of Telangana Shops & Establishment License No:
@@ -94,16 +87,9 @@
                 >https://www.blossomdigitalshop.com</a
               >
             </li>
-            <li>
-              BDS Style® (brand name) Trademark Registered ✅ 
-            </li>
-            <li>
-              Powered by PraSanSri.
-            </li>
-            <li>
-              Owner, Founder & Sole Proprietor Mrs. SANGEETHA
-              TUMA
-            </li>
+            <li>BDS Style® (brand name) Trademark Registered ✅</li>
+            <li>Powered by PraSanSri IT Services.</li>
+            <li>Owner, Founder & Sole Proprietor Mrs. SANGEETHA TUMA</li>
             <li>
               Self-Setup & Established with Own Capital/Investment and commenced
               in 2022
@@ -154,10 +140,22 @@
         <div class="organization">
           <h3>PraSanSri</h3>
           <p class="operation-sector">Transport services</p>
-          <p><a href="https://prasansri.com">https://prasansri.com</a></p>
-          <p>
-            Owned by Mr. Sridharnath Tuma & Mrs. Sangeetha Tuma
-          </p>
+          <ul>
+            <li>Powered by PraSanSri IT Services</li>
+            <li><a href="https://prasansri.com">https://prasansri.com</a></li>
+            <li>Mrs. Sangeetha Tuma</li>
+          </ul>
+        </div>
+
+        <!-- organization four: prasansri IT services  -->
+        <div class="organization">
+          <h3>PraSanSri</h3>
+          <p class="operation-sector">IT services</p>
+          <ul>
+            <li>Powered by PraSanSri IT Services</li>
+            <li><a href="https://prasansri.com">https://prasansri.com</a></li>
+            <li>Mrs. Sangeetha Tuma</li>
+          </ul>
         </div>
 
         <!-- realtor licenses -->
@@ -201,18 +199,11 @@
         </div>
         <ul>
           <li>Married: August 1998</li>
-          <li>
-            Spouse: Mr.SRIDHARNATH TUMA
-          </li>
-          <li>
-            Son: Mr. PRANAV TUMA
-          </li>
+          <li>Spouse: Mr.SRIDHARNATH TUMA</li>
+          <li>Son: Mr. PRANAV TUMA</li>
         </ul>
         <div class="address">
-          <p>
-            Permanent Residence & Registered Office
-            Address:
-          </p>
+          <p>Permanent Residence & Registered Office Address:</p>
           <pre>
 Flat No 3D, Plot No 88 & 88/A 
 Jains Anand Rock Garden Phase-1 
@@ -226,7 +217,7 @@ Hyderabad Telangana India
       </section>
     </div>
     <footer>
-      <p>Powered by PraSanSri</p>
+      <p>Powered by PraSanSri IT Services</p>
       <p>Copyright @ 2025</p>
       <p>All Rights Reserved</p>
     </footer>
