--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <ul>
             <li>Powered by PraSanSri IT Services</li>
             <li><a href="https://prasansri.com">https://prasansri.com</a></li>
-            <li>Mrs. Sangeetha Tuma</li>
+            <li>Owner Mrs. Sangeetha Tuma</li>
           </ul>
         </div>
 
@@ -154,7 +154,7 @@
           <ul>
             <li>Powered by PraSanSri IT Services</li>
             <li><a href="https://prasansri.com">https://prasansri.com</a></li>
-            <li>Mrs. Sangeetha Tuma</li>
+            <li>Owner Mrs. Sangeetha Tuma</li>
           </ul>
         </div>
 
@@ -223,3 +223,4 @@ Hyderabad Telangana India
     </footer>
   </body>
 </html>
+
