--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -79,7 +79,7 @@
 
         <!-- organization two: blossom digital shopping -->
         <div class="organization">
-          <h3>Blossom Digital Shopping™</h3>
+          <h3>Blossom Digital Shopping</h3>
           <p class="operation-sector">Clothing/Apparel</p>
           <ul>
             <li>
@@ -88,11 +88,10 @@
               >
             </li>
             <li>BDS Style® (brand name) Trademark Registered ✅</li>
-            <li>Powered by PraSanSri IT Services.</li>
+            <li>Powered by PraSanSri.</li>
             <li>Owner, Founder & Sole Proprietor Mrs. SANGEETHA TUMA</li>
             <li>
-              Self-Setup & Established with Own Capital/Investment and commenced
-              in 2022
+              Established in 2022
             </li>
             <li>
               <a href="https://www.blossomdigitalshop.com"
@@ -141,9 +140,9 @@
           <h3>PraSanSri</h3>
           <p class="operation-sector">Transport services</p>
           <ul>
-            <li>Powered by PraSanSri IT Services</li>
+            <li>Powered by PraSanSri</li>
             <li><a href="https://prasansri.com">https://prasansri.com</a></li>
-            <li>Owner Mrs. Sangeetha Tuma</li>
+            <li>Owner Mr. Sridharnath Tuma & Mrs. Sangeetha Tuma</li>
           </ul>
         </div>
 
@@ -217,10 +216,9 @@ Hyderabad Telangana India
       </section>
     </div>
     <footer>
-      <p>Powered by PraSanSri IT Services</p>
+      <p>Powered by PraSanSri</p>
       <p>Copyright @ 2025</p>
       <p>All Rights Reserved</p>
     </footer>
   </body>
 </html>
-
