--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 >https://www.primepropertiesagency.com</a
               >
             </li>
-            <li>Powered by PraSanSri IT Services.</li>
+            <li>Powered by PraSanSri</li>
             <li>Owner, Founder & Sole Proprietor Mrs. SANGEETHA TUMA</li>
             <li>
               Self-setup & established with own capital/investment and commenced
@@ -146,17 +146,6 @@
           </ul>
         </div>
 
-        <!-- organization four: prasansri IT services  -->
-        <div class="organization">
-          <h3>PraSanSri</h3>
-          <p class="operation-sector">IT services</p>
-          <ul>
-            <li>Powered by PraSanSri IT Services</li>
-            <li><a href="https://prasansri.com">https://prasansri.com</a></li>
-            <li>Owner Mrs. Sangeetha Tuma</li>
-          </ul>
-        </div>
-
         <!-- realtor licenses -->
         <div class="organization">
           <h3>Telangana State Real Estate Regulatory Authority</h3>
@@ -222,3 +211,4 @@ Hyderabad Telangana India
     </footer>
   </body>
 </html>
+
