--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -24,12 +24,9 @@
                 >https://www.primepropertiesagency.com</a
               >
             </li>
-            <li>Powered by PraSanSri</li>
+            <li>Powered by PraSanSri.</li>
             <li>Owner, Founder & Sole Proprietor Mrs. SANGEETHA TUMA</li>
-            <li>
-              Self-setup & established with own capital/investment and commenced
-              in 2020
-            </li>
+            <li>Established in 2020</li>
             <li>
               <a href="https://www.primepropertiesagency.com"
                 >https://www.primepropertiesagency.com®</a
@@ -90,9 +87,7 @@
             <li>BDS Style® (brand name) Trademark Registered ✅</li>
             <li>Powered by PraSanSri.</li>
             <li>Owner, Founder & Sole Proprietor Mrs. SANGEETHA TUMA</li>
-            <li>
-              Established in 2022
-            </li>
+            <li>Established in 2022</li>
             <li>
               <a href="https://www.blossomdigitalshop.com"
                 >https://www.blossomdigitalshop.com</a
@@ -146,19 +141,6 @@
           </ul>
         </div>
 
-        <!-- realtor licenses -->
-        <div class="organization">
-          <h3>Telangana State Real Estate Regulatory Authority</h3>
-          <ul>
-            <li>Authorized User : Mrs. Sangeetha Tuma</li>
-            <li>License No : A02400001060</li>
-            <li>
-              Note: Since the issue of TG RERA license I have not authorized any
-              Entity/ Agent or Person/s to act on my behalf
-            </li>
-          </ul>
-        </div>
-        <!-- END: organizations section -->
       </section>
       <hr />
 
@@ -211,4 +193,3 @@ Hyderabad Telangana India
     </footer>
   </body>
 </html>
-
