Refactor index.html with updated organization info
Updated organization details and added new sections.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 >https://www.primepropertiesagency.com</a
               >
             </li>
-            <li>Powered by PraSanSri.</li>
+            <li>Powered by PraSanSri IT Services.</li>
             <li>Owner, Founder & Sole Proprietor Mrs. SANGEETHA TUMA</li>
             <li>Established in 2020</li>
             <li>
@@ -85,7 +85,7 @@
               >
             </li>
             <li>BDS Style® (brand name) Trademark Registered ✅</li>
-            <li>Powered by PraSanSri.</li>
+            <li>Powered by PraSanSri IT Services.</li>
             <li>Owner, Founder & Sole Proprietor Mrs. SANGEETHA TUMA</li>
             <li>Established in 2022</li>
             <li>
@@ -135,9 +135,20 @@
           <h3>PraSanSri</h3>
           <p class="operation-sector">Transport services</p>
           <ul>
-            <li>Powered by PraSanSri</li>
+            <li>Powered by PraSanSri IT Services</li>
             <li><a href="https://prasansri.com">https://prasansri.com</a></li>
-            <li>Owner Mr. Sridharnath Tuma & Mrs. Sangeetha Tuma</li>
+            <li>Owners Mr. Sridharnath Tuma & Mrs. Sangeetha Tuma</li>
+          </ul>
+        </div>
+
+        <!-- organization four: prasansri  -->
+        <div class="organization">
+          <h3>PraSanSri</h3>
+          <p class="operation-sector">IT Services</p>
+          <ul>
+            <li>Powered by PraSanSri IT Services</li>
+            <li><a href="https://prasansri.com">https://prasansri.com</a></li>
+            <li>Owners & Founder Mr. Pranav Tuma & Mrs. Sangeetha Tuma</li>
           </ul>
         </div>
 
@@ -187,7 +198,7 @@ Hyderabad Telangana India
       </section>
     </div>
     <footer>
-      <p>Powered by PraSanSri</p>
+      <p>Powered by PraSanSri IT Services</p>
       <p>Copyright @ 2025</p>
       <p>All Rights Reserved</p>
     </footer>
