Revise organization information and business notes
Updated organization details and removed inactive domains. Added notes about business activity and ownership.

--- a/index.html
+++ b/index.html
@@ -19,19 +19,11 @@
           <h3>Prime Properties Real Estate Agency®</h3>
           <p class="operation-sector">Real estate services</p>
           <ul>
-            <li>
-              <a href="https://www.primepropertiesagency.com"
-                >https://www.primepropertiesagency.com</a
-              >
-            </li>
-            <li>Powered by PraSanSri IT Services.</li>
             <li>Owner, Founder & Sole Proprietor Mrs. SANGEETHA TUMA</li>
             <li>Established in 2020</li>
             <li>
-              <a href="https://www.primepropertiesagency.com"
-                >https://www.primepropertiesagency.com®</a
-              >
-              website is live since november 2020
+              <a>primepropertiesagency.com®</a>
+              website was live between November 2020 to 4th December 2025
             </li>
           </ul>
           <!-- false domains subsection  -->
@@ -40,6 +32,7 @@
               Domains not connected and inactive with complete domain rights
             </h4>
             <ul class="red">
+              <li><s>primepropertiesagency.com® </s>🚫</li>
               <li><s>primepropertiesagency.in </s>🚫</li>
               <li><s>primepropertiesagency.co.in </s>🚫</li>
             </ul>
@@ -50,6 +43,7 @@
             <ul>
               <li>GSTIN Licence Issued Date : 02-07-2021</li>
               <li>GSTIN NO: 36AETPT2433F1Z7</li>
+              <li>Trade Mark License No: 5185464</li>
               <li>Trade Mark License No: 6084751</li>
               <li>
                 Government Of Telangana Shops & Establishment License No:
@@ -77,22 +71,14 @@
         <!-- organization two: blossom digital shopping -->
         <div class="organization">
           <h3>Blossom Digital Shopping</h3>
-          <p class="operation-sector">Clothing/Apparel</p>
+          <p class="operation-sector"><b>BDS Style®</b> (brand name)</p>
           <ul>
-            <li>
-              <a href="https://www.blossomdigitalshop.com"
-                >https://www.blossomdigitalshop.com</a
-              >
-            </li>
-            <li>BDS Style® (brand name) Trademark Registered ✅</li>
-            <li>Powered by PraSanSri IT Services.</li>
+            <li>Clothing/Apparel Trademark Registered ✅</li>
             <li>Owner, Founder & Sole Proprietor Mrs. SANGEETHA TUMA</li>
             <li>Established in 2022</li>
             <li>
-              <a href="https://www.blossomdigitalshop.com"
-                >https://www.blossomdigitalshop.com</a
-              >
-              website is live since april 2022
+              <a>blossomdigitalshop.com</a>
+              website is between April 2022 - 4th December 2025
             </li>
           </ul>
           <!-- false domains subsection  -->
@@ -101,6 +87,7 @@
               Domains not connected and inactive with complete domain rights
             </h4>
             <ul class="red">
+              <li><s>blossomdigitalshop.com</s> 🚫</li>
               <li><s>bdsstyle.com</s> 🚫</li>
             </ul>
           </div>
@@ -113,6 +100,18 @@
               <li>Trademark Licence No : 5660425</li>
               <li>Government Of Telangana Shops & Establishment Licence No</li>
               <li>SEA/HYD/ALO/03/0406022/2022</li>
+            </ul>
+          </div>
+          <div class="organization-licenses">
+            <h4>
+              Blossom Digital Shopping
+              <span class="red">(Trademark Withdrawn)</span>
+            </h4>
+            <ul>
+              <li>Application Date: 25-10-2023</li>
+              <li>Application No: 6162352</li>
+              <li>Class: 25</li>
+              <li>Name of Applicant/ Sole Proprietor: SANGEETHA TUMA</li>
             </ul>
           </div>
           <!-- deleted email ids -->
@@ -135,24 +134,28 @@
           <h3>PraSanSri</h3>
           <p class="operation-sector">Transport services</p>
           <ul>
-            <li>Powered by PraSanSri IT Services</li>
             <li><a href="https://prasansri.com">https://prasansri.com</a></li>
-            <li>Owners Mr. Sridharnath Tuma & Mrs. Sangeetha Tuma</li>
+            <li>Owner Mrs. Sangeetha Tuma</li>
           </ul>
         </div>
-
-        <!-- organization four: prasansri  -->
-        <div class="organization">
-          <h3>PraSanSri</h3>
-          <p class="operation-sector">IT Services</p>
-          <ul>
-            <li>Powered by PraSanSri IT Services</li>
-            <li><a href="https://prasansri.com">https://prasansri.com</a></li>
-            <li>Owners & Founder Mr. Pranav Tuma & Mrs. Sangeetha Tuma</li>
-          </ul>
-        </div>
-
       </section>
+
+      <!-- NOTE -->
+      <section>
+        <h3 class="red">Note:</h3>
+        <ul>
+          <li class="red">
+            All above our businesses are Active from Registered business
+            address.
+          </li>
+          <li class="red">
+            We don't have our business agents, agency or branches in other
+            locations of Telangana, India, USA, UK, Canada and across Worldwide
+            <li class="red"><b>Websites Closed</b></li>
+          </li>
+        </ul>
+      </section>
+
       <hr />
 
       <!-- START: section two, about me rant -->
@@ -184,8 +187,8 @@
           <li>Son: Mr. PRANAV TUMA</li>
         </ul>
         <div class="address">
-          <p>Permanent Residence & Registered Office Address:</p>
-          <pre>
+          <p class="red">Permanent Residence & Registered Office Address:</p>
+          <pre >
 Flat No 3D, Plot No 88 & 88/A 
 Jains Anand Rock Garden Phase-1 
 Gafoor Nagar, Hitech City Road 
@@ -198,7 +201,7 @@ Hyderabad Telangana India
       </section>
     </div>
     <footer>
-      <p>Powered by PraSanSri IT Services</p>
+      <p>Powered by Sangeetha Tuma</p>
       <p>Copyright @ 2025</p>
       <p>All Rights Reserved</p>
     </footer>
