Revise organization information and licenses
Updated organization details, including licenses and deleted emails.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,14 @@
             <ul>
               <li>GSTIN Licence Issued Date : 02-07-2021</li>
               <li>GSTIN NO: 36AETPT2433F1Z7</li>
-              <li>Trade Mark License No: 5185464</li>
-              <li>Trade Mark License No: 6084751</li>
+              <li>
+                Trade Mark License No: 5185464 - Logo (registered date:
+                11-03-2023)
+              </li>
+              <li>
+                Trade Mark License No: 6084751 - Wordmark (registered date:
+                07-07-2024)
+              </li>
               <li>
                 Government Of Telangana Shops & Establishment License No:
                 SEA/HYD/ALO/03/0431431/2022
@@ -97,7 +103,10 @@
             <ul>
               <li>GSTIN Licence Issued Date : 21-03-2022</li>
               <li>GSTIN No : 36AETPT2433F2Z6</li>
-              <li>Trademark Licence No : 5660425</li>
+              <li>
+                Trademark Licence No : 5660425 - Wordmark (registered date:
+                28-09-2024)
+              </li>
               <li>Government Of Telangana Shops & Establishment Licence No</li>
               <li>SEA/HYD/ALO/03/0406022/2022</li>
             </ul>
@@ -140,6 +149,17 @@
         </div>
       </section>
 
+      <section>
+        <h3>Telangana State Real Estate Regulatory Authority:</h3>
+        <ul>
+          <li>Authorized User: Sangeetha Tuma</li>
+          <li>
+            Requested for Revocation/ Cancellation of TG RERA No: A02400001060
+            on 15-09-2025
+          </li>
+        </ul>
+      </section>
+
       <!-- NOTE -->
       <section>
         <h3 class="red">Note:</h3>
@@ -151,8 +171,14 @@
           <li class="red">
             We don't have our business agents, agency or branches in other
             locations of Telangana, India, USA, UK, Canada and across Worldwide
-            <li class="red"><b>Websites Closed</b></li>
           </li>
+          <li class="red">
+            Misuse of business profile, business owner profile, business names,
+            brand name, mobile numbers through Physical or Online, any business
+            activity from Registered Business Address or other locations,
+            Intellectual Property/ Trademark Act are applicable for such misuse.
+          </li>
+          <li class="red"><b>Websites Closed</b></li>
         </ul>
       </section>
 
@@ -188,7 +214,7 @@
         </ul>
         <div class="address">
           <p class="red">Permanent Residence & Registered Office Address:</p>
-          <pre >
+          <pre>
 Flat No 3D, Plot No 88 & 88/A 
 Jains Anand Rock Garden Phase-1 
 Gafoor Nagar, Hitech City Road 
