Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
               <li>GSTIN Licence Issued Date : 02-07-2021</li>
               <li>GSTIN NO: 36AETPT2433F1Z7</li>
               <li>
-                Trade Mark License No: 5185464 - Logo (registered date:
+                Trade Mark License No: 5185464 - <span>Logo</span> (registered date:
                 11-03-2023)
               </li>
               <li>
-                Trade Mark License No: 6084751 - Wordmark (registered date:
+                Trade Mark License No: 6084751 - <span>Wordmark</span> (registered date:
                 07-07-2024)
               </li>
               <li>
@@ -104,7 +104,7 @@
               <li>GSTIN Licence Issued Date : 21-03-2022</li>
               <li>GSTIN No : 36AETPT2433F2Z6</li>
               <li>
-                Trademark Licence No : 5660425 - Wordmark (registered date:
+                Trademark Licence No : 5660425 - <span>Wordmark</span> (registered date:
                 28-09-2024)
               </li>
               <li>Government Of Telangana Shops & Establishment Licence No</li>
@@ -165,7 +165,7 @@
         <h3 class="red">Note:</h3>
         <ul>
           <li class="red">
-            All above our businesses are Active from Registered business
+            All above businesses are Active from Registered business
             address.
           </li>
           <li class="red">
